--- a/FullWidthTabs/bower.json
+++ b/FullWidthTabs/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "normalize.css": "~3.0.3",
+    "modernizr": "~2.8.3"
   }
 }
