--- a/MultiColumnForm/package.json
+++ b/MultiColumnForm/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "browser-sync start --server --directory --files='index.html,css/main.css,js/main.js'"
   },
   "repository": {
     "type": "git",
